--- a/project/package.json
+++ b/project/package.json
@@ -21,11 +21,11 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && aws s3 sync build/ s3://ttemka-bucket"
   },
   "eslintConfig": {
     "extends": [
